--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@strata-foundation/react": "^3.10.3",
     "@strata-foundation/spl-token-bonding": "^3.10.3",
     "@strata-foundation/spl-token-collective": "^3.10.3",
+    "axios": "^0.27.2",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sequelize": "^6.21.4",
+    "sqlite3": "^5.0.11"
   },
   "devDependencies": {
     "@types/node": "18.7.13",
